--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo export:web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@supabase/supabase-js": "^2.20.0",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "gh-pages": "^5.0.0",
+    "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "typescript": "^4.9.4"
   },
-  "private": true
+  "private": true,
+  "homepage": "https://github.com/globemediaofficial/Supabase-AI.git"
 }
