--- a/package.json
+++ b/package.json
@@ -27,6 +27,5 @@
     "@types/react": "~18.0.14",
     "typescript": "^4.9.4"
   },
-  "private": true,
-  "homepage": "https://github.com/globemediaofficial/Supabase-AI.git"
+  "private": true
 }
