--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "deploy": "gh-pages -d web-build",
-    "predeploy": "expo export:web"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
